tests/reference/asr-intrinsics8-6c1e53e.stderr
semantic error: Type and kind of the relevant arguments of Ior must be the same
 --> tests/errors/intrinsics8.f90:4:14
  |
4 |     print *, ior(x, y)
  |              ^^^^^^^^^ 
